Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56836

Keyboard focus does not follow touch input (qml compositors)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.8.0
    • 5.7.0, 5.8
    • QPA: Wayland
    • None

    Description

      When touchEventsEnabled is set to true for ShellSurfaceItem, touching a client does not cause the focus to switch to that client, meaning keyboard (and virtual keyboard) input will not be sent to that client if tapping inside a TextEdit.

      This bug is in 5.7 as well, but is not exposed because of https://bugreports.qt.io/browse/QTBUG-56237

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes