Compositor: Switch keyboard focus on touch input

When touchEventsEnabled is set to true on ShellSurfaceItem, touching a
client did not switch the keyboard focus to that client. Consequently,
touching inside a TextField would not switch the focus to that client,
causing keyboard and virtual keyboard input to be delivered to the wrong
client.

Task-number: QTBUG-56836
Change-Id: I47134dfeb80d25e995baf91e51977dacb7087bb7
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>